--- a/section01/lab01.html
+++ b/section01/lab01.html
@@ -7,14 +7,7 @@
 
 <body>
     <script>
-        function solution(a, b, c) {
-            let answer;
-            if (a < b) answer = a;
-            else answer = b;
-            if (c < answer) answer = c;
-            return answer;
-        }
-        console.log(solution(2, 5, 1));
+        console.log("test입니다.");
     </script>
 </body>
 
