--- a/section01/lab01.html
+++ b/section01/lab01.html
@@ -7,7 +7,16 @@
 
 <body>
     <script>
-        console.log("test입니다.");
+        function solution(a, b, c) {
+            let answer;
+            if (a < b) answer = a;
+            else answer = b;
+            if (c < answer) answer = c
+            return answer;
+        }
+        console.log("[문제 1] 세 수 중 최솟값");
+        console.log("solution(12, 5, 7)");
+        console.log((solution(12, 5, 7)));
     </script>
 </body>
 
