세 수 중 최솟값

--- a/section01/lab01.html
+++ b/section01/lab01.html
@@ -17,6 +17,16 @@
         console.log("[문제 1] 세 수 중 최솟값");
         console.log("solution(12, 5, 7)");
         console.log((solution(12, 5, 7)));
+
+        // 모범답안
+        // function solution(a, b, c){
+        //         let answer;
+        //         if(a<b) answer=a;
+        //         else answer=b;
+        //         if(c<answer) answer=c;
+        //         return answer;
+        //     }
+
     </script>
 </body>
 
