--- a/section02/lab07.html
+++ b/section02/lab07.html
@@ -10,31 +10,37 @@
         // [문제 7] 봉우리
         function solution(arr) {
             let answer = 0;
-            let n = arr.length;
-            let dx = [-1, 0, 1, 0];
-            let dy = [0, 1, 0, -1];
-            for (let i = 0; i < n; i++) {
-                for (let j = 0; j < n; j++) {
-                    let flag = 1;
-                    for (let k = 0; k < 4; k++) {
-                        let nx = i + dx[k];
-                        let ny = j + dy[k];
-                        if (nx >= 0 && nx < n && ny >= 0 && ny < n && arr[nx][ny] >= arr[i][j]) {
-                            flag = 0;
-                            break;
-                        }
-                    }
-                    if (flag) answer++;
+            // 0을 추가한 newArr 생성
+            let newArr = arr;
+            const arrLen = arr.length;
+            let zeros = Array(arrLen + 2).fill(0);
+            for (let i = 0; i < arrLen; i++) {
+                newArr[i].splice(arrLen, 0, 0);
+                newArr[i].splice(0, 0, 0);
+            }
+            newArr.splice(arrLen, 0, zeros);
+            newArr.splice(0, 0, zeros);
+
+            // 봉우리 계산
+            for (let i = 1; i < arrLen + 1; i++) {
+                for (let j = 1; j < arrLen + 1; j++) {
+                    if (newArr[i][j] > newArr[i - 1][j] &&
+                        newArr[i][j] > newArr[i + 1][j] &&
+                        newArr[i][j] > newArr[i][j - 1] &&
+                        newArr[i][j] > newArr[i][j + 1])
+                        answer += 1;
                 }
             }
+
             return answer;
         }
 
-        let arr = [[5, 3, 7, 2, 3],
-        [3, 7, 1, 6, 1],
-        [7, 2, 5, 3, 4],
-        [4, 3, 6, 4, 1],
-        [8, 7, 3, 5, 2]];
+        let arr =
+            [[5, 3, 7, 2, 3],
+            [3, 7, 1, 6, 1],
+            [7, 2, 5, 3, 4],
+            [4, 3, 6, 4, 1],
+            [8, 7, 3, 5, 2]];
         console.log(solution(arr));
     </script>
 </body>
